--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.2",
+    "blockstack": "^19.3.0",
     "formik": "^2.0.3",
     "formik-material-ui": "^1.0.0",
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
     "react": "^16.11.0",
+    "react-blockstack": "^0.6.3",
     "react-dom": "^16.11.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
