--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^16.11.0",
     "react-blockstack": "^0.6.3",
     "react-dom": "^16.11.0",
+    "react-pdf": "^4.1.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
